Clean up the confusing codebase