@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * Writes and reads files
@@ -13,19 +12,19 @@ public class FileUtil {
 
     private static final String CHARSET = "UTF-8";
 
-    public static boolean isFileExists(Path file) {
-        return Files.exists(file) && Files.isRegularFile(file);
+    public static boolean isFileExists(Path path) {
+        return Files.exists(path) && Files.isRegularFile(path);
     }
 
     /**
      * Returns true if {@code path} can be converted into a {@code Path} via
-     * {@link Paths#get(String)}, otherwise returns false.
+     * {@link Path#of(String)}, otherwise returns false.
      *
      * @param path A string representing the file path. Cannot be null.
      */
     public static boolean isValidPath(String path) {
         try {
-            Paths.get(path);
+            Path.of(path);
         } catch (InvalidPathException ipe) {
             return false;
         }
@@ -37,48 +36,34 @@ public class FileUtil {
      *
      * @throws IOException if the file or directory cannot be created.
      */
-    public static void createIfMissing(Path file) throws IOException {
-        if (!isFileExists(file)) {
-            createFile(file);
-        }
-    }
-
-    /**
-     * Creates a file if it does not exist along with its missing parent directories.
-     */
-    public static void createFile(Path file) throws IOException {
-        if (Files.exists(file)) {
+    public static void createIfMissing(Path path) throws IOException {
+        if (isFileExists(path)) {
             return;
         }
-
-        createParentDirsOfFile(file);
-
-        Files.createFile(file);
-    }
-
-    /**
-     * Creates parent directories of file if it has a parent directory
-     */
-    public static void createParentDirsOfFile(Path file) throws IOException {
-        Path parentDir = file.getParent();
-
-        if (parentDir != null) {
-            Files.createDirectories(parentDir);
+        Path parentPath = path.getParent();
+        if (parentPath != null) {
+            Files.createDirectories(parentPath);
         }
+        Files.createFile(path);
     }
 
     /**
-     * Assumes file exists
+     * Reads the content of a file as string.
+     *
+     * @param path path to the file
+     * @return the string representation of the file
      */
-    public static String readFromFile(Path file) throws IOException {
-        return new String(Files.readAllBytes(file), CHARSET);
+    public static String readFromFile(Path path) throws IOException {
+        return new String(Files.readAllBytes(path), CHARSET);
     }
 
     /**
-     * Writes given string to a file. Will create the file if it does not exist yet.
+     * Writes given string to a file. A new file will be created if it does not exist yet.
+     *
+     * @param path path to the file
+     * @param content the content to be written into the file
      */
-    public static void writeToFile(Path file, String content) throws IOException {
-        Files.write(file, content.getBytes(CHARSET));
+    public static void writeToFile(Path path, String content) throws IOException {
+        Files.write(path, content.getBytes(CHARSET));
     }
-
 }
